// Vitest Snapshot v1

exports[`plugins/fallback > should convert fallback rule correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "test": /foo/,
            "use": [
              {
                "loader": "foo",
              },
            ],
          },
          {
            "mimetype": "text/javascript",
            "resolve": {
              "fullySpecified": false,
            },
            "use": [
              {
                "loader": "data-uri",
              },
            ],
          },
          {
            "test": /bar/,
            "use": [
              {
                "loader": "bar",
              },
            ],
          },
          {
            "exclude": [
              /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$/,
              /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
              /\\\\\\.html\\$/,
              /\\\\\\.json\\$/,
            ],
            "type": "asset/resource",
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/fallback > should not convert fallback rule when output.enableAssetFallback is not enabled 1`] = `
{
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "test": /foo/,
            "use": [
              {
                "loader": "foo",
              },
            ],
          },
        ],
      },
      {
        "mimetype": "text/javascript",
        "resolve": {
          "fullySpecified": false,
        },
        "use": [
          {
            "loader": "data-uri",
          },
        ],
      },
      {
        "test": /bar/,
        "use": [
          {
            "loader": "bar",
          },
        ],
      },
    ],
  },
}
`;
